# pybuc

./: LICENSE.txt  README.html  README.md  pyproject.toml  readme.rst  requirements.txt
examples/: airline.py  simulated_regression.py
examples/archive/: airline.py
examples/data/: simulated_regression.py
pybuc/: buc.py
pybuc/__pycache__/: buc._forecast-128.py39.1.nbc  buc._forecast-128.py39.nbi  buc._forecast-131.py39.1.nbc  buc._forecast-131.py39.nbi  buc._forecast-132.py39.1.nbc  buc._forecast-132.py39.nbi  buc._forecast-133.py39.1.nbc  buc._forecast-133.py39.nbi  buc._forecast-134.py39.1.nbc  buc._forecast-134.py39.nbi  buc._simulate_posterior_predictive_outcome-49.py39.1.nbc  buc._simulate_posterior_predictive_outcome-49.py39.nbi  buc._simulate_posterior_predictive_response-47.py39.1.nbc  buc._simulate_posterior_predictive_response-47.py39.nbi  buc._simulate_posterior_predictive_response-49.py39.1.nbc  buc._simulate_posterior_predictive_response-49.py39.nbi  buc._simulate_posterior_predictive_response-51.py39.1.nbc  buc._simulate_posterior_predictive_response-51.py39.nbi  buc.dk_smoother-359.py39.1.nbc  buc.dk_smoother-359.py39.nbi  buc.dk_smoother-371.py39.1.nbc  buc.dk_smoother-371.py39.nbi  buc.forecast-133.py39.1.nbc  buc.forecast-133.py39.nbi  buc.forecast-440.py39.1.nbc  buc.forecast-440.py39.nbi  buc.forecast-456.py39.1.nbc  buc.forecast-456.py39.nbi  buc.forecast-460.py39.1.nbc  buc.forecast-460.py39.nbi  buc.kalman_filter-293.py39.1.nbc  buc.kalman_filter-293.py39.nbi  buc.kalman_filter-300.py39.1.nbc  buc.kalman_filter-300.py39.nbi  buc.simulate_linear_state_space-178.py39.1.nbc  buc.simulate_linear_state_space-178.py39.nbi  buc.simulate_posterior_predictive_outcome-210.py39.1.nbc  buc.simulate_posterior_predictive_outcome-210.py39.nbi  buc.simulate_posterior_predictive_outcome-217.py39.1.nbc  buc.simulate_posterior_predictive_outcome-217.py39.nbi  (+4 more)
pybuc/model_assessment/: performance.py
pybuc/statespace/: durbin_koopman_smoother.py  kalman_filter.py
pybuc/statespace/__pycache__/: durbin_koopman_smoother.dk_smoother-58.py39.1.nbc  durbin_koopman_smoother.dk_smoother-58.py39.2.nbc  durbin_koopman_smoother.dk_smoother-58.py39.3.nbc  durbin_koopman_smoother.dk_smoother-58.py39.nbi  kalman_filter.kalman_filter-17.py39.1.nbc  (+6 more)
pybuc/utils/: array_operations.py
pybuc/vectorized/: distributions.py
statespace/: durbin_koopman_smoother.py  kalman_filter.py
utils/: array_operations.py  data_transforms.py
