[tool.poetry]
name = "pybuc"
version = "0.19.3"
description = "Fast estimation of Bayesian structural time series models via Gibbs sampling."
authors = ["Devin D. Garcia"]
license = "BSD 3-Clause"
readme = "README.md"
keywords = [
    "structural",
    "time series",
    "unobserved components",
    "bsts",
    "forecast",
    "state space"
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = ">=1.5.3"
numpy = ">=1.26.1"
matplotlib = ">=3.7.1"
twine = ">=4.0.2"
scipy = ">=1.11.1"
seaborn = ">=0.13.0"
setuptools = ">=68.0.0"
numba = ">=0.56.4"
mpld3 = ">=0.5.9"
statsmodels = ">=0.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
repository = "https://github.com/devindg/pybuc"
homepage = "https://github.com/devindg/pybuc"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
